# pyjwt-exemplo

./: README.md  app.py  pyproject.toml
